exclude POJOs from test coverage

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
 		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
 		<sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
 		<sonar.language>java</sonar.language>
+		<sonar.coverage.exclusions>
+			**/entity/**/*,
+			**/configuration/**/*,
+			**/adaptor/controller/exception/ValidationErrorResponse.class,
+			**/usecase/exception/GameException.class
+		</sonar.coverage.exclusions>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -116,8 +122,10 @@
 				</executions>
 				<configuration>
 					<excludes>
-						<exclude>**/entity/**</exclude>
-						<exclude>**/configuration/**</exclude>
+						<exclude>**/entity/**/*</exclude>
+						<exclude>**/configuration/**/*</exclude>
+						<exclude>**/adaptor/controller/exception/ValidationErrorResponse.class</exclude>
+						<exclude>**/usecase/exception/GameException.class</exclude>
 					</excludes>
 				</configuration>
 			</plugin>
